[tool.poetry]
name = "llama-dwight"
version = "0.1.0"
description = "LangGraph implementation of llama-dwight agents"
authors = []
packages = [{include = "llama_dwight"}]

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.1.19"
langchain-groq = "^0.1.9"
langchain-ollama = "^0.1.1"


[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.1.50"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
